--- a/perfil.html
+++ b/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/agendamento.css">
+    <link rel="stylesheet" href="style/perfil.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -40,39 +40,38 @@
     <div class="text-dark">
         <h2 class="text-center mt-3 mb-3">Informações de usuário</h2>
     <div> 
-        <div class="container rounded-5 ps-4 pt-4 pb-1 pe-4 mt-2 text-dark justify-content-start col-sm-5 shadow" id="login_container">
+        <div class="container" id="login_container">
 
             <div id="icon" class="text-center">
-                <img src=https://static.vecteezy.com/system/resources/previews/008/844/895/non_2x/user-icon-design-free-png.png id="icon" alt="png.user"
-                style="width: 20%; height: 20%; border-radius: 100%; margin: 3%;">
+                <img src=https://i.postimg.cc/sfpqpV0g/mulher.png id="icon" alt="png.user"
+                style="width: 17%; height: 17%; border-radius: 100%; margin: 3%;">
             </div>
 
             <div class="form-floating mb-3" id="nome">
-                <input type="text" class="form-control" placeholder="Insira seu nome" value="firts_user" id="uname"></input>
+                <input type="text" class="form-control" placeholder="Insira seu nome" value="Maria Silva Nogueira" id="uname"></input>
                 <label for="floatingInput">Nome</label>
             </div>
             <div class="form-floating mb-3" id="email">
-                <input type="email" class="form-control" id="floatingInput" value="firts_user@gmail.com" placeholder="nome@exemplo.com">
+                <input type="email" class="form-control" id="floatingInput" value="masilva_nogueira@gmail.com" placeholder="nome@exemplo.com">
                 <label for="floatingInput">Endereço de Email</label>
             </div>
             <div class="d-flex">
                 <div class="form-floating mb-1 col-5">
-                    <input type="text" class="form-control" placeholder="(99)99999-9999" value="(99)99999-9999" id="telefone"></input>
+                    <input type="text" class="form-control" placeholder="(81)99890-9975" value="(81)99890-9975" id="telefone"></input>
                     <label for="floatingInput">Telefone</label>
                 </div>
                 <div class="form-floating mb-3 col-sm-5 offset-sm-2">
-                    <input type="text" id="data" name="date" value="12/12/2012" class="form-control">
+                    <input type="text" id="data" name="date" value="19/12/1996" class="form-control">
                     <label for="date" class="form-label">Data de nascimento</label>
                 </div>
             </div>
             <div class="form-floating mb-3" id="senha">
-                <input type="password" class="form-control" id="floatingPassword" value="********" placeholder="Insira uma Senha">
+                <input type="password" class="form-control" id="floatingPassword" value="**********" placeholder="Insira uma Senha">
                 <label for="floatingPassword">Minha senha</label>
             </div>
             <div class="text-center" id="editar">
                 <div>
                     <button id="editar" onclick="validarDadosPessoais()" class="btn btn-primary" type="submit">Editar informações</button>
-                    <button id="remover" onclick="validarDadosPessoais()" class="btn btn-primary" type="submit">Remover conta</button>
                 </div>
             </div>
         </div>
@@ -105,9 +104,6 @@
                     <p>Telefone: (11) 1234-5678</p>
                     <p>Endereço: Rua Exemplo, 123 - São Paulo, SP</p>
                 </div>
-            </div>
-            <div class="redes-footer">
-                <p>Nossas redes sociais</p>
             </div>
         </footer>
     </main>
